# ambilight

./: .gitignore  ArrayAverager.cpp  ArrayAverager.h  Averager.cpp  Averager.h  CMakeLists.txt  ColorOfBlock.cpp  ColorOfBlock.hpp  ConfigParser.cpp  ConfigParser.h  FindLibJpegTurbo.cmake  NetworkMode.cpp  NetworkMode.hpp  README.md  SerialPort.cpp  SerialPort.hpp  V4L2Capture.cpp  V4L2Capture.h  V4L2Mode.cpp  V4L2Mode.hpp  averager.h  backlight.conf  colorOfBlock.cpp  colorOfBlock.hpp  image_utils.h  main.cpp  network.conf  networkmode.cpp  networkmode.hpp  simpleConfigParser.h  v4l2.conf  v4l2mode.cpp  v4l2mode.hpp
.github/workflows/: cmake-single-platform.yml
client_app/: .gitignore  CMakeLists.txt  client.conf  main.cpp
mcu/: platformio.ini
mcu/src/: main.cpp
